# video-capture

./: .env.example  .gitignore  README.md  build.py  config.enc  config.enc.bak  config.json  config.json.bak  gen_config_enc.py  main.py  pyproject.toml  test_sss.py  timeline_final.md
.github/workflows/: build.yml
api/: app.py  deps.py  schemas.py
api/routes/: __init__.py  generated.py  materials.py  videos.py
gui/: index.html  package-lock.json  package.json  vite.config.js
gui/electron/: main.js  preload.js
gui/scripts/: after-pack.js
gui/src/: App.vue  main.js
gui/src/api/: index.js
gui/src/components/: ConfirmDialog.vue  Pagination.vue  PromptDialog.vue  ToastMessage.vue
gui/src/composables/: useFolders.js  usePlaybackGuard.js  useToast.js
gui/src/router/: index.js
gui/src/views/: MashupManager.vue  MaterialManager.vue  VideoManager.vue
scripts/: EnvVarUpdate.nsh  build.py  download-ffmpeg.sh  install.py  installer.nsh
sql/: agents.sql  hosts
src/: auth.py  cli.py  config.py  http_client.py  logger.py  model_download.py  pipeline.py  utils.py
src/api/: app.py  deps.py  response.py  schemas.py
src/api/routes/: __init__.py  agents.py  editor.py  export.py  folders.py  generated.py  materials.py  notes.py  profile.py  resources.py  settings.py  videos.py
src/api/services/: agent_service.py  editor_service.py  export_service.py  folder_service.py  generated_service.py  material_service.py  note_service.py  profile_service.py  (+3 more)
src/core/: database.py  vector_store.py
src/db/: engine.py  models.py  vector.py
src/download/: base.py  bilibili.py  douyin.py  kuaishou.py  other.py  xiaohongshu.py  youtube.py
src/migrations/: 001_add_folder_type.py  002_add_agent_key.py  003_drop_gen_materials.py  004_add_material_status.py  005_add_notes_is_system.py  006_add_thumbnail.py  007_add_asr_segments.py  007_add_setting_is_hidden.py  008_add_cms_filepath.py  __init__.py
src/models/: models.py
src/pipelines/: download.py  generate.py  ingest.py
src/processing/: asr.py  compositor.py  ffmpeg.py  paragraph.py  subtitle.py  timeline.py  video.py
src/query/: llm_optimizer.py  search.py  subtitle_gen.py  video_synth.py
src/services/: agents.py  asr_queue.py  llm.py  search.py  tts.py
src/tts/: cosyvoice.py
src/video/: extract.py
tests/: test_config.py  test_database.py  test_paragraph.py  test_subtitle_gen.py  test_subtitle_parse.py  test_time.py  test_transcribe.py  test_vector_store.py
(+29 files in other folders)
