[project]
name = "video-capture"
version = "0.1.0"
description = "Video subtitle extraction, vector search, and subtitle generation pipeline"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy>=2.0.49",
    "python-dotenv>=1.0.0",
    "openai-whisper>=20240930",
    "chromadb>=0.5.0",
    "anthropic>=0.50.0",
    "pytest",
    "requests",
    "torchaudio",
    "typer>=0.24.2",
    "fastapi>=0.136.1",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
tts = [
 "torch",
 "torchaudio",
]
local = [
    "sentence-transformers>=3.0",
]
test = ["pytest>=8.0", "responses>=0.25"]

[tool.pytest.ini_options]
testpaths = ["tests"]
