[project]
name = "video-capture"
version = "0.1.0"
description = "Video subtitle extraction, vector search, and subtitle generation pipeline"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy>=2.0.49",
    "openai-whisper>=20240930",
    "chromadb>=0.5.0",
    "requests",
    "typer>=0.24.2",
    "fastapi>=0.136.1",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
    "aiohttp>=3.13.5",
    "aiofiles>=25.1.0",
    "lxml>=6.1.0",
    "yt-dlp>=2026.3.17",
    "imageio[opencv,pyav]>=2.37.3",
    "moviepy>=2.2.1",
    "cryptography>=47.0.0",
]

[project.optional-dependencies]
tts = [
 "torch",
 "torchaudio",
]
local = [
    "sentence-transformers>=3.0",
]
test = ["pytest>=8.0", "responses>=0.25"]

[tool.pytest.ini_options]
testpaths = ["tests"]
