[project]
name = "video-capture"
version = "0.1.0"
description = "Video subtitle extraction, vector search, and subtitle generation pipeline"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy>=2.0.49",
    "chromadb>=0.5.0",
    "requests",
    "fastapi>=0.136.1",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
    "aiohttp>=3.13.5",
    "aiofiles>=25.1.0",
    "lxml>=6.1.0",
    "yt-dlp>=2026.3.17",
    "moviepy>=2.2.1",
    "cryptography>=47.0.0",
    "pyinstaller>=6.20.0",
    "faster-whisper>=1.2.1",
]



[project.optional-dependencies]
test = ["pytest>=8.0", "responses>=0.25"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
